more quote block fixes, client block padding spacing updates

--- a/css/portfolio-v2-32a69d.webflow.css
+++ b/css/portfolio-v2-32a69d.webflow.css
@@ -544,6 +544,9 @@ a {
     margin-top: 0px;
     padding: 15vh 0px 0px;
   }
+  .heading {
+    margin-bottom: 30px;
+  }
   .heading.thin {
     font-size: 28px;
     line-height: 38px;
@@ -553,6 +556,9 @@ a {
     padding-top: 10px;
     padding-bottom: 0px;
     border-style: none;
+  }
+  .heading.quote_heading {
+    margin-top: 30px;
   }
   .grid.client_grid {
     margin-bottom: 30px;
@@ -632,17 +638,49 @@ a {
     display: block;
     margin-top: 30px;
     margin-bottom: 60px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    justify-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: start;
+    -ms-flex-line-pack: start;
+    align-content: start;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 20px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
   }
   .grid.padding_80.quote_grid {
     margin-bottom: 30px;
     padding-top: 0px;
   }
   .link-block {
+    display: block;
+    width: 60%;
     margin-top: 30px;
+    float: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .thumb.client {
-    max-width: 70%;
-    padding: 15px 30px 15px 0px;
+    max-width: 100%;
+    padding: 15px 0px;
   }
   .column-2 {
     position: static;
